Fill portfolio with the projects.

--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Epic &mdash; iOS Developer</title>
+	<title>Demchenko A.V. &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
 	<meta name="keywords" content="iPhone, iPad, iOS, Xcode, mobile application" />
-	<meta name="author" content="demchenko" />
+	<meta name="author" content="demchenko.work" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -69,7 +69,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="fh5co-logo" class="inside-page">
-		<a href="index.html" class="transition"><i class="icon-laptop"></i><em><span class="icon-home"></span></em></a>
+		<a href="index.html" class="transition"><i> <img src="images/apple.png"></i><em><span> <img src="images/home.png"></span></em></a>
 	</div>
 
 	<div id="fh5co-main" role="main">
