--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Epic &mdash; iOS developer</title>
+	<title>Demchenko &mdash; Homepage: iOS developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
 	<meta name="keywords" content="iPhone, iPad, iOS, Xcode, mobile application" />
-	<meta name="author" content="Demchenko" />
+	<meta name="author" content="demchenko.work" />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -69,7 +69,7 @@
 	<div class="fh5co-loader"></div>
 
 	<div id="fh5co-logo">
-		<a href="index.html" class="transition"><i class="icon-laptop"></i><em><span class="icon-home"></span></em></a>
+		<a href="index.html" class="transition"><i> <img src="images/apple.png"></i><em><span> <img src="images/home.png"></span></em></a>
 	</div>
 
 	<div id="fh5co-main" role="main">
@@ -81,7 +81,7 @@
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-intro padding-right">
-						<h1>I'm Demchenko Artem <em>&amp;</em> I'm an iOS developer. I love to code. <a href="about.html" class="transition"><em>About Me</em></a></h1>
+						<h1>I'm Demchenko Artem <em>&amp;</em> I'm an iOS developer. Mobile applications is my life. <a href="about.html" class="transition"><em>About Me</em></a></h1>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
@@ -91,21 +91,21 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="momunity.html" class="transition animate-box">
-							<img src="images/pic_1.png" alt="iOS applications">
+							<img src="images/momunity_cover.png" alt="iOS applications">
 							<div class="fh5co-item-text-wrap">
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2>Momunity</h2>-->
-								<!--</div>-->
+								<div class="fh5co-item-text">
+									<h2>Momunity</h2>
+								</div>
 							</div>
 						</a>
 					</div>
 					<div class="fh5co-item">
 						<a href="index.html" class="transition animate-box">
-							<img src="images/pic_3.png" alt="iOS applications">
+							<img src="images/tele2work_cover.png" alt="iOS applications">
 							<div class="fh5co-item-text-wrap">
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2>Tele2Work</h2>-->
-								<!--</div>-->
+								<div class="fh5co-item-text">
+									<h2>Tele2 Work</h2>
+								</div>
 							</div>
 						</a>
 					</div>
@@ -113,35 +113,35 @@
 				</div>
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="index.html" class="transition animate-box">
-							<img src="images/pic_2.png" alt="iOS applications">
+						<a href="vdnh.html" class="transition animate-box">
+							<img src="images/vdnh_cover.png" alt="iOS applications">
 							<div class="fh5co-item-text-wrap">
-								<!--<div class="fh5co-item-text">-->
-								<!--<h2>VDNH</h2>-->
-								<!--</div>-->
+								<div class="fh5co-item-text">
+								<h2>VDNH</h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="vgorode.html" class="transition animate-box">
+							<img src="images/vgorode_cover.jpg" alt="iOS applications">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2>Vgorode</h2>
+								</div>
 							</div>
 						</a>
 					</div>
 					<div class="fh5co-item">
 						<a href="index.html" class="transition animate-box">
-							<img src="images/pic_4.png" alt="iOS applications">
+							<img src="images/afisha_cover.jpg" alt="iOS applications">
 							<div class="fh5co-item-text-wrap">
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2>Let's do it</h2>-->
-								<!--</div>-->
+								<div class="fh5co-item-text">
+								<h2>Afisha</h2>
+								</div>
 							</div>
 						</a>
 					</div>
-					<!--<div class="fh5co-item">-->
-						<!--<a href=".html" class="transition animate-box">-->
-							<!--<img src="images/pic_5.jpg" alt="iOS applications">-->
-							<!--<div class="fh5co-item-text-wrap">-->
-								<!--&lt;!&ndash;<div class="fh5co-item-text">&ndash;&gt;-->
-								<!--&lt;!&ndash;<h2>Vgorode</h2>&ndash;&gt;-->
-								<!--&lt;!&ndash;</div>&ndash;&gt;-->
-							<!--</div>-->
-						<!--</a>-->
-					<!--</div>-->
 
 
 					<div id="fh5co-footer" class="padding-left">
