--- a/vdnh.html
+++ b/vdnh.html
@@ -10,7 +10,7 @@
 	<title>Demchenko A.V. &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
-	<meta name="keywords" content="momunity" />
+	<meta name="keywords" content="vdnh" />
 	<meta name="author" content="demchenko.work" />
 
   	<!-- Facebook and Twitter integration -->
@@ -80,8 +80,8 @@
 
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
-					<h1>Momunity - application for moms</h1>
-					<p>Momunity is a local networking app for moms which allows you to easily connect with like-minded mommys nearby, see what's going on in your area, exchange with moms like you, plan common  activities and meet your friends spontaneosly - just as you please.</p>
+					<h1>VDNH - travel guide for the biggest Moscow exhibition</h1>
+					<p>Moscow VDNH exhibition.</p>
 					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
 				</div>
 			</div>
@@ -91,13 +91,13 @@
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-heading padding-right">
-						<h2>Momunity</h2>
-						<p>Momunity is about quick accessibility, spontaneous leisure planning, wonderfull moms and new friends in your area, real meet ups and real support.</p>
+						<h2>VDNH</h2>
+						<p>Moscow VDNH exhibition.</p>
 					</div>
-					
+
 					<div class="fh5co-item">
-						<a href="images/momunity_1.png" class="image-popup animate-box">
-							<img src="images/momunity_1.png" alt="Momunity" title="Best for moms">
+						<a href="images/vdnh_5.png" class="image-popup animate-box">
+							<img src="images/vdnh_5.png" alt="VDNH" title="Travel guide">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -106,8 +106,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/momunity_2.png" class="image-popup animate-box">
-							<img src="images/momunity_2.png" alt="Momunity" title="Best for moms">
+						<a href="images/vdnh_2.png" class="image-popup animate-box">
+							<img src="images/vdnh_2.png" alt="VDNH" title="Travel guide">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -116,18 +116,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/momunity_6.png" class="image-popup animate-box">
-							<img src="images/momunity_6.png" alt="Momunity" title="Best for moms">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="fh5co-item">
-						<a href="images/momunity_7.png" class="image-popup animate-box">
-							<img src="images/momunity_7.png" alt="Momunity" title="Best for moms">
+						<a href="images/vdnh_3.png" class="image-popup animate-box">
+							<img src="images/vdnh_3.png" alt="VDNH" title="Travel guide">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -138,8 +128,8 @@
 				</div>
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="images/momunity_3.png" class="image-popup animate-box">
-							<img src="images/momunity_3.png" alt="Momunity" title="Best for moms">
+						<a href="images/vdnh_4.png" class="image-popup animate-box">
+							<img src="images/vdnh_4.png" alt="VDNH" title="Travel guide">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -148,8 +138,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/momunity_4.png" class="image-popup animate-box">
-							<img src="images/momunity_4.png" alt="Momunity" title="Best for moms">
+						<a href="images/vdnh_7.png" class="image-popup animate-box">
+							<img src="images/vdnh_7.png" alt="VDNH" title="Travel guide">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -158,18 +148,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/momunity_5.png" class="image-popup animate-box">
-							<img src="images/momunity_5.png" alt="Momunity" title="Best for moms">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="fh5co-item">
-						<a href="images/momunity_8.png" class="image-popup animate-box">
-							<img src="images/momunity_8.png" alt="Momunity" title="Best for moms">
+						<a href="images/vdnh_1.png" class="image-popup animate-box">
+							<img src="images/vdnh_1.png" alt="VDNH" title="Travel guide">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
