Updated vgorode project.

--- a/momunity.html
+++ b/momunity.html
@@ -92,7 +92,7 @@
 				<div class="fh5co-col-1">
 					<div class="fh5co-heading padding-right">
 						<h2>Momunity</h2>
-						<p>Momunity is about quick accessibility, spontaneous leisure planning, wonderfull moms and new friends in your area, real meet ups and real support.</p>
+						<p>Momunity is about quick accessibility, spontaneous leisure planning, wonderfull moms and new friends in your area, real meet ups and real support. <a href="https://itunes.apple.com/de/app/momunity/id1264526741?mt=8" class="transition"><em>App Store</em></a></p>
 					</div>
 					
 					<div class="fh5co-item">
