--- a/vdnh.html
+++ b/vdnh.html
@@ -80,9 +80,9 @@
 
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
-					<h1>VDNH - travel guide for the biggest Moscow exhibition</h1>
-					<p>Moscow VDNH exhibition.</p>
-					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+					<h1>VDNH - travel guide for the biggest exhibition complex in Moscow</h1>
+					<p>VDNH.</p>
+					<p>The Exhibition of Achievements of National Economy is the largest exposition, museum and recreational complex in the world, one of the most popular public spaces of the capital city of Russia. Each year, it is visited by about 25 million people.</p>
 				</div>
 			</div>
 
@@ -92,7 +92,7 @@
 				<div class="fh5co-col-1">
 					<div class="fh5co-heading padding-right">
 						<h2>VDNH</h2>
-						<p>Moscow VDNH exhibition.</p>
+						<p>Moscow VDNH. <a href="https://itunes.apple.com/us/developer/vdnh-ao/id1164250127" class="transition"><em>App Store</em></a></p>
 					</div>
 
 					<div class="fh5co-item">
