--- a/vgorode.html
+++ b/vgorode.html
@@ -91,13 +91,13 @@
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-heading padding-right">
-						<h2>VDNH</h2>
-						<p>Moscow VDNH exhibition.</p>
+						<h2>Vgorode</h2>
+						<p>Vgorode. All in one place: news, reviews, clubs, exhibitions and events. <a href="https://itunes.apple.com/ru/app/вгороде/id1221884253?mt=8" class="transition"><em>App Store</em></a></p>
 					</div>
 
 					<div class="fh5co-item">
-						<a href="images/vgorode_1.jpg" class="image-popup animate-box">
-							<img src="images/vgorode_1.jpg" alt="VGORODE" title="Lifestyle">
+						<a href="images/vgorode_1.png" class="image-popup animate-box">
+							<img src="images/vgorode_1.png" alt="VGORODE" title="Lifestyle">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -105,31 +105,51 @@
 							</div>
 						</a>
 					</div>
-					<!--<div class="fh5co-item">-->
-						<!--<a href="images/" class="image-popup animate-box">-->
-							<!--<img src="images/" alt="VGORODE" title="Lifestyle">-->
-							<!--<div class="fh5co-item-text-wrap">-->
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2><i class="icon-search2"></i></h2>-->
-								<!--</div>-->
-							<!--</div>-->
-						<!--</a>-->
-					<!--</div>-->
-					<!--<div class="fh5co-item">-->
-						<!--<a href="images/" class="image-popup animate-box">-->
-							<!--<img src="images/" alt="VGORODE" title="Lifestyle">-->
-							<!--<div class="fh5co-item-text-wrap">-->
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2><i class="icon-search2"></i></h2>-->
-								<!--</div>-->
-							<!--</div>-->
-						<!--</a>-->
-					<!--</div>-->
+					<div class="fh5co-item">
+						<a href="images/vgorode_2.png" class="image-popup animate-box">
+							<img src="images/vgorode_2.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="images/vgorode_3.png" class="image-popup animate-box">
+							<img src="images/vgorode_3.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="images/vgorode_7.png" class="image-popup animate-box">
+							<img src="images/vgorode_7.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="images/vgorode_8.png" class="image-popup animate-box">
+							<img src="images/vgorode_8.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
 				</div>
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="images/vgorode_2.jpg" class="image-popup animate-box">
-							<img src="images/vgorode_2.jpg" alt="VGORODE" title="Lifestyle">
+						<a href="images/vgorode_4.png" class="image-popup animate-box">
+							<img src="images/vgorode_4.png" alt="VGORODE" title="Lifestyle">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -137,26 +157,46 @@
 							</div>
 						</a>
 					</div>
-					<!--<div class="fh5co-item">-->
-						<!--<a href="images/" class="image-popup animate-box">-->
-							<!--<img src="images/" alt="VGORODE" title="Lifestyle">-->
-							<!--<div class="fh5co-item-text-wrap">-->
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2><i class="icon-search2"></i></h2>-->
-								<!--</div>-->
-							<!--</div>-->
-						<!--</a>-->
-					<!--</div>-->
-					<!--<div class="fh5co-item">-->
-						<!--<a href="images/" class="image-popup animate-box">-->
-							<!--<img src="images/" alt="VGORODE" title="Lifestyle">-->
-							<!--<div class="fh5co-item-text-wrap">-->
-								<!--<div class="fh5co-item-text">-->
-									<!--<h2><i class="icon-search2"></i></h2>-->
-								<!--</div>-->
-							<!--</div>-->
-						<!--</a>-->
-					<!--</div>-->
+					<div class="fh5co-item">
+						<a href="images/vgorode_5.png" class="image-popup animate-box">
+							<img src="images/vgorode_5.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="images/vgorode_6.png" class="image-popup animate-box">
+							<img src="images/vgorode_6.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="images/vgorode_6.png" class="image-popup animate-box">
+							<img src="images/vgorode_6.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="images/vgorode_9.png" class="image-popup animate-box">
+							<img src="images/vgorode_9.png" alt="VGORODE" title="Lifestyle">
+							<div class="fh5co-item-text-wrap">
+								<div class="fh5co-item-text">
+									<h2><i class="icon-search2"></i></h2>
+								</div>
+							</div>
+						</a>
+					</div>
 
 					<div id="fh5co-footer" class="padding-left">
 						<p><small>&copy; 2018 Demchenko. All Rights Reserved. </small></p>
