--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-intro padding-right">
-						<h1>I'm Demchenko Artem <em>&amp;</em> I'm an iOS developer. Mobile applications is my life. <a href="about.html" class="transition"><em>About Me</em></a></h1>
+						<h1>I'm Demchenko Artem <em>&amp;</em> I'm an iOS developer. Mobile applications development is my life. <a href="about.html" class="transition"><em>About Me</em></a></h1>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
@@ -124,7 +124,7 @@
 					</div>
 					<div class="fh5co-item">
 						<a href="vgorode.html" class="transition animate-box">
-							<img src="images/vgorode_cover.jpg" alt="iOS applications">
+							<img src="images/vgorode_cover.png" alt="iOS applications">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2>Vgorode</h2>
