--- a/comviq.html
+++ b/comviq.html
@@ -10,8 +10,8 @@
 	<title>Demchenko Artem &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
-	<meta name="keywords" content="Vgorode" />
-	<meta name="author" content="demchenko.work" />
+	<meta name="keywords" content="sweden"/>
+	<meta name="author" content="demchenko.work"/>
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -80,8 +80,8 @@
 
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
-					<h1>Vgorode - be on pulse</h1>
-					<p>Vgorode - tickets, events, exhibitions and theater</p>
+					<h1>Comviq - swedish telecom operator</h1>
+					<p>Comviq app is a selfcare application for a one of most popular sweden telecomunication operator. Here is shown dark theme screenshots.</p>
 				</div>
 			</div>
 
@@ -90,13 +90,13 @@
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-heading padding-right">
-						<h2>Vgorode</h2>
-						<p>Vgorode. All in one place: news, reviews, clubs, exhibitions and events. Kyiv and other cities <a href="https://appadvice.com/app/vgorode-ua/1221884253" class="transition"><em>App Store</em></a></p>
+						<h2>Comviq</h2>
+						<p>Control of your mobile subscriptions and even broadband, see prices, data usages, change settings easily, pay directly in the app!<a href="https://itunes.apple.com/us/app/comviq/id469353162?mt=8" class="transition"><em>App Store</em></a></p>
 					</div>
-
+					
 					<div class="fh5co-item">
-						<a href="images/vgorode_1.png" class="image-popup animate-box">
-							<img src="images/vgorode_1.png" alt="VGORODE" title="Lifestyle">
+						<a href="images/comviq_0.png" class="image-popup animate-box">
+							<img src="images/comviq_0.png" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -105,38 +105,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vgorode_2.png" class="image-popup animate-box">
-							<img src="images/vgorode_2.png" alt="VGORODE" title="Lifestyle">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="fh5co-item">
-						<a href="images/vgorode_3.png" class="image-popup animate-box">
-							<img src="images/vgorode_3.png" alt="VGORODE" title="Lifestyle">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="fh5co-item">
-						<a href="images/vgorode_7.png" class="image-popup animate-box">
-							<img src="images/vgorode_7.png" alt="VGORODE" title="Lifestyle">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="fh5co-item">
-						<a href="images/vgorode_8.png" class="image-popup animate-box">
-							<img src="images/vgorode_8.png" alt="VGORODE" title="Lifestyle">
+						<a href="images/comviq_1.png" class="image-popup animate-box">
+							<img src="images/comviq_1.png" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -145,10 +115,11 @@
 						</a>
 					</div>
 				</div>
+
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="images/vgorode_4.png" class="image-popup animate-box">
-							<img src="images/vgorode_4.png" alt="VGORODE" title="Lifestyle">
+						<a href="images/comviq_2.png" class="image-popup animate-box">
+							<img src="images/comviq_2.png" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -157,18 +128,18 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vgorode_5.png" class="image-popup animate-box">
-							<img src="images/vgorode_5.png" alt="VGORODE" title="Lifestyle">
+						<a href="images/comviq_3.png" class="image-popup animate-box">
+							<img src="images/comviq_3.png" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
 								</div>
 							</div>
 						</a>
-					</div>
+					</div>					
 					<div class="fh5co-item">
-						<a href="images/vgorode_6.png" class="image-popup animate-box">
-							<img src="images/vgorode_6.png" alt="VGORODE" title="Lifestyle">
+						<a href="images/comviq_4.png" class="image-popup animate-box">
+							<img src="images/comviq_4.png" alt="Comviq" title="Sweden telecom">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -176,26 +147,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="fh5co-item">
-						<a href="images/vgorode_6.png" class="image-popup animate-box">
-							<img src="images/vgorode_6.png" alt="VGORODE" title="Lifestyle">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
-					<div class="fh5co-item">
-						<a href="images/vgorode_9.png" class="image-popup animate-box">
-							<img src="images/vgorode_9.png" alt="VGORODE" title="Lifestyle">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2><i class="icon-search2"></i></h2>
-								</div>
-							</div>
-						</a>
-					</div>
+				</div>
 
 					<div id="fh5co-footer" class="padding-left">
 						<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
