--- a/tele2work.html
+++ b/tele2work.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Demchenko A.V. &mdash; iOS Developer</title>
+	<title>Demchenko Artem &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
 	<meta name="keywords" content="tele2" />
@@ -81,7 +81,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
 					<h1>Tele2 - Sweden telecommunication company</h1>
-					<p>Tele2 Work.</p>
+					<p>Tele2 Work</p>
 					<!--<p></p>-->
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 				<div class="fh5co-col-1">
 					<div class="fh5co-heading padding-right">
 						<h2>Tele2 Work</h2>
-						<p>Tele2 - selfservice.</p>
+						<p>Tele2 - B2B selfservice</p>
 					</div>
 
 					<div class="fh5co-item">
@@ -159,7 +159,7 @@
 					</div>
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2018 Demchenko. All Rights Reserved. </small></p>
+						<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
