--- a/vdnh.html
+++ b/vdnh.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Demchenko A.V. &mdash; iOS Developer</title>
+	<title>Demchenko Artem &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
 	<meta name="keywords" content="vdnh" />
@@ -159,7 +159,7 @@
 					</div>
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2018 Demchenko. All Rights Reserved. </small></p>
+						<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
