--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Demchenko A.V. &mdash; iOS Developer</title>
+	<title>Demchenko Artem &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
 	<meta name="keywords" content="iPhone, iPad, iOS, Xcode, mobile application" />
@@ -75,23 +75,34 @@
 	<div id="fh5co-main" role="main">
 		
 		<div class="container">
-			
-			
+
 			<figure class="fh5co-img">
 				<img src="images/single_1.jpg" alt="iOS developer" class="img-responsive animate-box">
 			</figure>
 
 			<div class="row">
-				<div class="col-md-8 col-md-push-4 fh5co-heading">
-					<h1>A little about me</h1>
-					<p>About me:</p>
-					<p> - excellent knowledge of Objective-C and Swift</p>
-					<p> - native commercial applications in AppStore.</p>
-					<p> - can make the best results in sort term.</p>
+				<div class="fh5co-grid">
+				
+					<div class="fh5co-col-1">
+						<figure class="fh5co-img">
+							<img src="images/cat_sima.jpg" alt="cat">
+						</figure>						
+					</div>
+
+					<div class="fh5co-col-2">
+						<!-- <div class="col-md-8 col-md-push-4 fh5co-heading"> -->
+							<h1>A little about me</h1>
+							<p>Me:</p>
+							<p> 🐱 Like cats, physics and thought experiments 🤓</p>
+							<p> 📖 Learn every day smth new and spread my own knowledge are the best things that make me feel excite💡</p>
+							<p> 👨‍💻 Make the best results in sort term ⌛️</p>
+						<!-- </div> -->
+					</div>
+
 				</div>
 			</div>
 			<div id="fh5co-footer">
-				<p><small>&copy; 2018 Demchenko. All Rights Reserved. </small></p>
+				<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
 				<ul class="fh5co-social">
 					<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 					<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
