--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Demchenko &mdash; Homepage: iOS developer</title>
+	<title>Demchenko Artem &mdash; Homepage: iOS developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
 	<meta name="keywords" content="iPhone, iPad, iOS, Xcode, mobile application" />
@@ -81,7 +81,7 @@
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-intro padding-right">
-						<h1>I'm Demchenko Artem <em>&amp;</em> I'm an iOS developer. Mobile applications development is my life. <a href="about.html" class="transition"><em>About Me</em></a></h1>
+						<h1>I'm Artem Demchenko <em>&amp;</em><br>an iOS developer👨‍💻 <br>Mobile applications development is my life <a href="about.html" class="transition"><em>More</em></a></h1>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
@@ -92,34 +92,11 @@
 					<div class="fh5co-item">
 						<a href="momunity.html" class="transition animate-box">
 							<img src="images/momunity_cover.png" alt="iOS applications">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2>Momunity</h2>
-								</div>
-							</div>
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="index.html" class="transition animate-box">
+						<a href="tele2work.html" class="transition animate-box">
 							<img src="images/tele2work_cover.png" alt="iOS applications">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2>Tele2 Work</h2>
-								</div>
-							</div>
-						</a>
-					</div>
-
-				</div>
-				<div class="fh5co-col-2">
-					<div class="fh5co-item">
-						<a href="vdnh.html" class="transition animate-box">
-							<img src="images/vdnh_cover.png" alt="iOS applications">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-								<h2>VDNH</h2>
-								</div>
-							</div>
 						</a>
 					</div>
 					<div class="fh5co-item">
@@ -132,8 +109,23 @@
 							</div>
 						</a>
 					</div>
+
+				</div>
+				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="index.html" class="transition animate-box">
+						<a href="comviq.html" class="transition animate-box">
+							<img src="images/comviq_cover.png" alt="iOS applications">
+						</a>
+					</div>
+
+					<div class="fh5co-item">
+						<a href="vdnh.html" class="transition animate-box">
+							<img src="images/vdnh_cover.png" alt="iOS applications">
+						</a>
+					</div>
+					
+					<div class="fh5co-item">
+						<a href="about.html" class="transition animate-box">
 							<img src="images/afisha_cover.jpg" alt="iOS applications">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
@@ -145,7 +137,7 @@
 
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2018 Demchenko. All Rights Reserved. </small></p>
+						<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
