--- a/about.html
+++ b/about.html
@@ -46,10 +46,6 @@
 	<script src="js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
 	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
 	
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
@@ -66,47 +62,22 @@
 	<body>
 	
 	<!-- Loader -->
-	<div class="fh5co-loader"></div>
-	
-	<div id="fh5co-logo" class="inside-page">
-		<a href="index.html" class="transition"><i> <img src="images/apple.png"></i><em><span> <img src="images/home.png"></span></em></a>
-	</div>
+	<!-- <div class="fh5co-loader"></div> -->
 
 	<div id="fh5co-main" role="main">
 		
 		<div class="container">
-
-			<figure class="fh5co-img">
-				<img src="images/single_1.jpg" alt="iOS developer" class="img-responsive animate-box">
-			</figure>
-
-			<div class="row">
-				<div class="fh5co-grid">
-				
-					<div class="fh5co-col-1">
-						<figure class="fh5co-img">
-							<img src="images/cat_sima.jpg" alt="cat">
-						</figure>						
-					</div>
-
 					<div class="fh5co-col-2">
 						<!-- <div class="col-md-8 col-md-push-4 fh5co-heading"> -->
-							<h1>A little about me</h1>
-							<p>Me:</p>
-							<p> 🐱 Like cats, physics and thought experiments 🤓</p>
-							<p> 📖 Learn every day smth new and spread my own knowledge are the best things that make me feel excite💡</p>
-							<p> 👨‍💻 Make the best results in sort term ⌛️</p>
+							<h1>A little about me:</h1>
+							<p>More than 10 years in software development, above 7 years of experience in iOS development. I offer expertise in mobile applications development, software development, testing, maintaining and documenting codebase.</p>
 						<!-- </div> -->
 					</div>
-
-				</div>
-			</div>
 			<div id="fh5co-footer">
-				<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
+				<p><small>&copy; 2024 Demchenko A.V. All Rights Reserved. </small></p>
 				<ul class="fh5co-social">
-					<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
-					<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/artem-demchenko-58006610b"><i class="icon-linkedin-with-circle"></i></a></li>
+					<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 					<li><a href="https://github.com/artdmk"><i class="icon-github-with-circle"></i></a></li>
 				</ul>
 			</div>
