--- a/kenogo.html
+++ b/kenogo.html
@@ -10,7 +10,7 @@
 	<title>Demchenko Artem &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
-	<meta name="keywords" content="vdnh" />
+	<meta name="keywords" content="KenoGO" />
 	<meta name="author" content="demchenko.work" />
 
   	<!-- Facebook and Twitter integration -->
@@ -24,7 +24,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<!-- Place favicon.ico and apple-touch-icon.jpeg in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic|Roboto:400,300,700' rel='stylesheet' type='text/css'>
@@ -64,18 +64,19 @@
 
 	</head>
 	<body>
+	
+	<!-- Loader -->
+	<!-- <div class="fh5co-loader"></div> -->
 
 	<div id="fh5co-main" role="main">
 		
 		<div class="container">
 			
-			
-
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
-					<h1>VDNH</h1>
-					<p>Travel guide for the biggest exhibition complex in Moscow<br>
-						<i>happened a long ago before the war in Ukraine</i></p>
+					<h1>KenoGO</h1>
+					<p>Online lottery in Australia</p>
+					<!--<p></p>-->
 				</div>
 			</div>
 
@@ -83,9 +84,14 @@
 			<div class="fh5co-grid">
 				
 				<div class="fh5co-col-1">
+					<div class="fh5co-heading padding-right">
+						<!-- <h2>KenoGO</h2> -->
+						<p>KenoGO app - classic lottery game Keno <a href="https://apps.apple.com/au/app/kenogo-play-the-biggest-keno/id1613531713" class="transition"><em>App Store</em></a></p>
+					</div>
+
 					<div class="fh5co-item">
-						<a href="images/vdnh_5.png" class="image-popup animate-box">
-							<img src="images/vdnh_5.png" alt="VDNH" title="Travel guide">
+						<a href="images/kenogo_1.jpeg" class="image-popup animate-box">
+							<img src="images/kenogo_1.jpeg" alt="KenoGO" title="Lottery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -94,8 +100,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_2.png" class="image-popup animate-box">
-							<img src="images/vdnh_2.png" alt="VDNH" title="Travel guide">
+						<a href="images/kenogo_2.jpeg" class="image-popup animate-box">
+							<img src="images/kenogo_2.jpeg" alt="KenoGO" title="Lottery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -104,8 +110,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_3.png" class="image-popup animate-box">
-							<img src="images/vdnh_3.png" alt="VDNH" title="Travel guide">
+						<a href="images/kenogo_3.jpeg" class="image-popup animate-box">
+							<img src="images/kenogo_3.jpeg" alt="KenoGO" title="Lottery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -116,8 +122,8 @@
 				</div>
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="images/vdnh_4.png" class="image-popup animate-box">
-							<img src="images/vdnh_4.png" alt="VDNH" title="Travel guide">
+						<a href="images/kenogo_4.jpeg" class="image-popup animate-box">
+							<img src="images/kenogo_4.jpeg" alt="KenoGO" title="Lottery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -126,8 +132,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_7.png" class="image-popup animate-box">
-							<img src="images/vdnh_7.png" alt="VDNH" title="Travel guide">
+						<a href="images/kenogo_5.jpeg" class="image-popup animate-box">
+							<img src="images/kenogo_5.jpeg" alt="KenoGO" title="Lottery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -136,8 +142,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_1.png" class="image-popup animate-box">
-							<img src="images/vdnh_1.png" alt="VDNH" title="Travel guide">
+						<a href="images/kenogo_6.jpeg" class="image-popup animate-box">
+							<img src="images/kenogo_6.jpeg" alt="KenoGO" title="Lottery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -147,11 +153,10 @@
 					</div>
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2017 Demchenko A.V. All Rights Reserved. </small></p>
+						<p><small>&copy; 2024 Artem Demchenko. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
-							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
-							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/artem-demchenko-58006610b"><i class="icon-linkedin-with-circle"></i></a></li>
+							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 							<li><a href="https://github.com/artdmk"><i class="icon-github-with-circle"></i></a></li>
 						</ul>
 					</div>
