--- a/vanongo.html
+++ b/vanongo.html
@@ -10,7 +10,7 @@
 	<title>Demchenko Artem &mdash; iOS Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="iOS Developer" />
-	<meta name="keywords" content="vdnh" />
+	<meta name="keywords" content="VanOnGo" />
 	<meta name="author" content="demchenko.work" />
 
   	<!-- Facebook and Twitter integration -->
@@ -64,6 +64,13 @@
 
 	</head>
 	<body>
+	
+	<!-- Loader -->
+	<div class="fh5co-loader"></div>
+	
+	<div id="fh5co-logo">
+		<a href="index.html" class="transition"><i> <img src="images/apple.png"></i><em><span> <img src="images/home.png"></span></em></a>
+	</div>
 
 	<div id="fh5co-main" role="main">
 		
@@ -73,9 +80,9 @@
 
 			<div class="row">
 				<div class="col-md-8 col-md-push-4 fh5co-heading">
-					<h1>VDNH</h1>
-					<p>Travel guide for the biggest exhibition complex in Moscow<br>
-						<i>happened a long ago before the war in Ukraine</i></p>
+					<h1>VanOnGo</h1>
+					<p>Driver application</p>
+					<!--<p></p>-->
 				</div>
 			</div>
 
@@ -83,9 +90,14 @@
 			<div class="fh5co-grid">
 				
 				<div class="fh5co-col-1">
+					<div class="fh5co-heading padding-right">
+						<!-- <h2>VanOnGo</h2> -->
+						<p>VanOnGo app - Last mile delivery <a href="https://apps.apple.com/au/app/vanongo-driver-business/id1546714147" class="transition"><em>App Store</em></a></p>
+					</div>
+
 					<div class="fh5co-item">
-						<a href="images/vdnh_5.png" class="image-popup animate-box">
-							<img src="images/vdnh_5.png" alt="VDNH" title="Travel guide">
+						<a href="images/vanongo_1.png" class="image-popup animate-box">
+							<img src="images/vanongo_1.png" alt="VanOnGo" title="Last mile delivery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -94,8 +106,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_2.png" class="image-popup animate-box">
-							<img src="images/vdnh_2.png" alt="VDNH" title="Travel guide">
+						<a href="images/vanongo_2.png" class="image-popup animate-box">
+							<img src="images/vanongo_2.png" alt="VanOnGo" title="Last mile delivery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -104,8 +116,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_3.png" class="image-popup animate-box">
-							<img src="images/vdnh_3.png" alt="VDNH" title="Travel guide">
+						<a href="images/vanongo_3.png" class="image-popup animate-box">
+							<img src="images/vanongo_3.png" alt="VanOnGo" title="Last mile delivery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -116,8 +128,8 @@
 				</div>
 				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="images/vdnh_4.png" class="image-popup animate-box">
-							<img src="images/vdnh_4.png" alt="VDNH" title="Travel guide">
+						<a href="images/vanongo_4.png" class="image-popup animate-box">
+							<img src="images/vanongo_4.png" alt="VanOnGo" title="Last mile delivery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -126,8 +138,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_7.png" class="image-popup animate-box">
-							<img src="images/vdnh_7.png" alt="VDNH" title="Travel guide">
+						<a href="images/vanongo_5.png" class="image-popup animate-box">
+							<img src="images/vanongo_5.png" alt="VanOnGo" title="Last mile delivery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -136,8 +148,8 @@
 						</a>
 					</div>
 					<div class="fh5co-item">
-						<a href="images/vdnh_1.png" class="image-popup animate-box">
-							<img src="images/vdnh_1.png" alt="VDNH" title="Travel guide">
+						<a href="images/vanongo_6.png" class="image-popup animate-box">
+							<img src="images/vanongo_6.png" alt="VanOnGo" title="Last mile delivery">
 							<div class="fh5co-item-text-wrap">
 								<div class="fh5co-item-text">
 									<h2><i class="icon-search2"></i></h2>
@@ -147,7 +159,7 @@
 					</div>
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2017 Demchenko A.V. All Rights Reserved. </small></p>
+						<p><small>&copy; 2024 Artem Demchenko. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
 							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
