--- a/index.html
+++ b/index.html
@@ -64,30 +64,31 @@
 
 	</head>
 	<body>
-	
-	<!-- Loader -->
-	<div class="fh5co-loader"></div>
-
-	<div id="fh5co-logo">
-		<a href="index.html" class="transition"><i> <img src="images/apple.png"></i><em><span> <img src="images/home.png"></span></em></a>
-	</div>
 
 	<div id="fh5co-main" role="main">
 		
-
 		<div class="container">
 			
 			<div class="fh5co-grid">
 				
 				<div class="fh5co-col-1">
 					<div class="fh5co-intro padding-right">
-						<h1>I'm Artem Demchenko <em>&amp;</em><br>an iOS developer👨‍💻 <br>Mobile applications development is my life <a href="about.html" class="transition"><em>More</em></a></h1>
+						<h1>Hi, I'm Artem, experienced <br> iOS developer👨‍💻 <br> Here are some examples of the projects I have actively participated <a href="about.html" class="transition"><em>More</em></a></h1>
 						<ul class="fh5co-social">
-							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
 							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/artem-demchenko-58006610b"><i class="icon-linkedin-with-circle"></i></a></li>
 							<li><a href="https://github.com/artdmk"><i class="icon-github-with-circle"></i></a></li>
 						</ul>
+					</div>
+					<div class="fh5co-item">
+						<a href="kenogo.html" class="transition animate-box">
+							<img src="images/kenogo_cover.jpeg" alt="iOS applications">
+						</a>
+					</div>
+					<div class="fh5co-item">
+						<a href="vanongocustomer.html" class="transition animate-box">
+							<img src="images/vanongocustomer_cover.jpeg" alt="iOS applications">
+						</a>
 					</div>
 					<div class="fh5co-item">
 						<a href="momunity.html" class="transition animate-box">
@@ -99,19 +100,19 @@
 							<img src="images/tele2work_cover.png" alt="iOS applications">
 						</a>
 					</div>
+				</div>
+
+				<div class="fh5co-col-2">
 					<div class="fh5co-item">
-						<a href="vgorode.html" class="transition animate-box">
-							<img src="images/vgorode_cover.png" alt="iOS applications">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-									<h2>Vgorode</h2>
-								</div>
-							</div>
+						<a href="vanongo.html" class="transition animate-box">
+							<img src="images/vanongo_cover.jpeg" alt="iOS applications">
 						</a>
 					</div>
-
-				</div>
-				<div class="fh5co-col-2">
+					<div class="fh5co-item">
+						<a href="lottoland.html" class="transition animate-box">
+							<img src="images/lottoland_cover.png" alt="iOS applications">
+						</a>
+					</div>
 					<div class="fh5co-item">
 						<a href="comviq.html" class="transition animate-box">
 							<img src="images/comviq_cover.png" alt="iOS applications">
@@ -123,25 +124,22 @@
 							<img src="images/vdnh_cover.png" alt="iOS applications">
 						</a>
 					</div>
-					
 					<div class="fh5co-item">
-						<a href="about.html" class="transition animate-box">
-							<img src="images/afisha_cover.jpg" alt="iOS applications">
-							<div class="fh5co-item-text-wrap">
-								<div class="fh5co-item-text">
-								<h2>Afisha</h2>
-								</div>
-							</div>
+						<a href="vgorode.html" class="transition animate-box">
+							<img src="images/vgorode_cover.png" alt="iOS applications">
 						</a>
 					</div>
-
+					<!-- <div class="fh5co-item">
+						<a href="about.html" class="transition animate-box">
+							<img src="images/afisha_cover.jpg" alt="iOS applications">
+						</a>
+					</div> -->
 
 					<div id="fh5co-footer" class="padding-left">
-						<p><small>&copy; 2020 Demchenko A.V. All Rights Reserved. </small></p>
+						<p><small>&copy; 2024 Artem Demchenko. All Rights Reserved. </small></p>
 						<ul class="fh5co-social">
-							<li><a href="https://join.skype.com/invite/ao9grszQzh8C"><i class="icon-skype-with-circle"></i></a></li>
-							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/artem-demchenko-58006610b"><i class="icon-linkedin-with-circle"></i></a></li>
+							<li><a href="https://www.facebook.com/artdmnk"><i class="icon-facebook-with-circle"></i></a></li>
 							<li><a href="https://github.com/artdmk"><i class="icon-github-with-circle"></i></a></li>
 						</ul>
 					</div>
